kubernetes/Cluster-Int-Temp/deployments/apps/wikijs/service.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: wikijs
    namespace: apps
spec:
    selector:
        app: wikijs
    ports:
        - name: ENC[AES256_GCM,data:gRSEhw==,iv:0EjEOshQuleZdzf4BsXpdlrfEu1ocpMO7LEDuv1qZRo=,tag:ndUlq4t2BnfjvJdA/IbZ9Q==,type:str]
          port: ENC[AES256_GCM,data:0rKseg==,iv:Zf7Y8xor9tll9INIXVy0pdqAcFzpblgHBsMaTgJLPB0=,tag:k7AWTFOEpVznwctUofN6Jg==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQeGE4Tk9CTjZMZmhmVW9z
[...]
            MlPYs5iHTmbm7lLfl/PjJaGb02a76GD4IIO16IR6HmXmwRK71KL6Gg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-15T01:06:26Z"
    mac: ENC[AES256_GCM,data:abxfqW54mxySDE4DHEnihx1+OSVy/D12/WlhyUIzjHMBxxVBzwpHvr4N0ryr2nxAoj04uWV0rrCFXP4UV1aBz/eltwb1Fu5ojNST0kcQHb+hbyl01dSTTw1JH9gqVLSPrAqnsw4Lh9DiTfNQ2itJ42GqVbyWMTOgOfz0A9GkH/4=,iv:CWZFTLGtTDmfjWWcJDjxPWpCV6xBj9D/PBjAIHxCLso=,tag:IoCoP4eUdT2DnNtDCOb2Uw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
