kubernetes/Cluster-Int-Temp/deployments/apps/wikijs/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: wikijs
    namespace: apps
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:/dIXEGU9nUEy8GanWxtwLAYEfNM=,iv:T9dLrN8rew0Ic74EJVcZhIcS1xZ4sR+uWryYF7ywu/s=,tag:ZIqwwfsW1ODLJGvt4mAXAg==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:9RvVGBVg,iv:nQmQdJSuWFNniv0DPqM4OIfa/axBrL7omCIxxyiEqGs=,tag:2e/I93GfYNUEFO0t4CazxQ==,type:str]
              namespace: ENC[AES256_GCM,data:cmtt6g==,iv:PJ74ojEOQGSso9aZUKFypxzDQ0y81hJxM/W5i/q7U00=,tag:v7gUNDfed+q2tf2L/CfoRA==,type:str]
              port: ENC[AES256_GCM,data:XgBw2w==,iv:DR16w5MnIP/cuatbq80Jkd/27qk1PBhZB2ZUeQwNewc=,tag:vDXeFIo8Pnk8tBhVANbt8A==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:ARVlSQfdLP/xw5PqiM0=,iv:jJQfZWFdD811tox1YyYOXiLUmyoy6t3+mu1yCPBC0Cc=,tag:3d0K44j+NvIRJpR7PM9yaQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjMy9mTWwzalFTaWh0NVhq
[...]
            I7STWaKmzhI5j/5Xy8h84nWpsFBXIClwCzHaMMt50X2YJOYvx78//Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-15T01:07:09Z"
    mac: ENC[AES256_GCM,data:gHxLs0HfXYzO9Z+Pia8yMSD6vRabNblGeG6hGfgSx7jl7/kK0m2cGWw1q1VX8qnFHA7ZGhO+TmLMtTJJE7b/B3dTHGUbgqbEJO1fCJrW5nOt+s7CwUOBHSvaytCgY5YmHzEHY9LEEUO9HS3AHv01mr9kWKESI9xNkZZZU92T0ZE=,iv:kCND7nDiIqiWPYoLaRZN+7GgpBEt5v6mZ1/9KyGM/60=,tag:ukv2m9Z2CGH3YguOFYTA0g==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
